존재하지 않는 API 호출 404 상태의 {reason: 실제사유}을 응답

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.mustache.servlet.expose-session-attributes=true
 # sql formatter
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.web.resources.add-mappings=false
+
